fix css selector for first row in total on mobile screens

--- a/style.css
+++ b/style.css
@@ -2294,7 +2294,7 @@ background:white;
   .tix-column-per-ticket:before {content: "Price Per Ticket: " !important;}
   .tix-row-total td:before {content: "Total: " !important;}
 
-  td:first-child .tix-row-total {
+  .tix-row-total td:first-child {
     display: none !important;
   }
 
